Adiciona mais imagens de navios

--- a/LevelUp2019/Atividade2/Index.html
+++ b/LevelUp2019/Atividade2/Index.html
@@ -6,15 +6,22 @@
     <title>Navios</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1></h1>
     <p id="p10">yeet</p>
 
     <div>
 
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><img src="./img/Shokaku.jpg"></li>
+            <li><img src="./img/Zuikaku.jpg"></li>
+            <li><img src="./img/Akagi.jpg"></li>
+            <li><img src="./img/Kaga.jpg" ></li>
+            <li><img src="./img/Soryu.jpg"></li>
+            <li><img src="./img/Hiryu.jpg"></li>
+            <li><img src="./img/Kagero01.jpg"></li>
+            <li><img src="./img/Musashi.jpg"></li>
+            <li><img src="./img/Taiho.jpg"></li>
+            <li><img src="./img/Yamato.jpg"></li>
         </ul>
     </div>
 
