adiciona tag basicas

--- a/teste.html
+++ b/teste.html
@@ -8,6 +8,21 @@
 </head>
 <body>
     <h1>Essa é uma tag de nivel mais alto</h1>
+    <!-- Comentario aleatorio para ser ser aleator-->
+    <p>
+        <b>Ask especially collecting </b>terminated may son expression.
+        Extremely eagerness principle <b>estimable</b> own was <i>man</i>. Men <b>received</b> far his dashwood subjects new. 
+        My sufficient surrounded an companions dispatched in on. 
+        <strong>Connection too unaffected expression led son possession.</strong>
+    </p>
+
+    <p>
+        New smiling friends and her another. 
+        Leaf she does none love high yet. Snug love will up bore as be.     
+        Pursuit <em>man son musical general pointed.</em> 
+        It surprise informed mr advanced do outweigh
+    </p>
+
     <h2>Essa outra definicao</h2>
 
     <h2>Essa outra definao com o mesmo tag</h2>
