--- a/teste.html
+++ b/teste.html
@@ -25,6 +25,30 @@
 
     <h2>Essa outra definicao</h2>
 
+    <!-- Fazer um lista com os items -->
+    <ol>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>
+            <ul>
+                <li>yeet</li>
+                <li>asd</li>
+                <li>asdas</li>
+                <li>asdas</li>
+                <li>asda</li>
+            </ul>
+        </li>
+    </ol>
+
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+    </ul>
+
     <h2>Essa outra definao com o mesmo tag</h2>
 
     <h3>Essa outra heading com outra tag menor</h3>
