--- a/Web-dev-bootcamp/firstPage.html
+++ b/Web-dev-bootcamp/firstPage.html
@@ -6,7 +6,50 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- this is a comment -->
-    <h1>This is my first tag</h1>
+    <h1>Essa é uma tag de nivel mais alto</h1>
+    <!-- Comentario aleatorio para ser ser aleator-->
+    <p>
+        <b>Ask especially collecting </b>terminated may son expression.
+        Extremely eagerness principle <b>estimable</b> own was <i>man</i>. Men <b>received</b> far his dashwood subjects new. 
+        My sufficient surrounded an companions dispatched in on. 
+        <strong>Connection too unaffected expression led son possession.</strong>
+    </p>
+
+    <p>
+        New smiling friends and her another. 
+        Leaf she does none love high yet. Snug love will up bore as be.     
+        Pursuit <em>man son musical general pointed.</em> 
+        It surprise informed mr advanced do outweigh
+    </p>
+
+    <h2>Essa outra definicao</h2>
+
+    <!-- Fazer um lista com os items -->
+    <ol>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>
+            <ul>
+                <li>yeet</li>
+                <li>asd</li>
+                <li>asdas</li>
+                <li>asdas</li>
+                <li>asda</li>
+            </ul>
+        </li>
+    </ol>
+
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+    </ul>
+
+    <h2>Essa outra definao com o mesmo tag</h2>
+
+    <h3>Essa outra heading com outra tag menor</h3>
 </body>
 </html>
