adiciona tags <img> e <a>

--- a/Web-dev-bootcamp/firstPage.html
+++ b/Web-dev-bootcamp/firstPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina 1</title>
 </head>
 <body>
     <h1>Essa é uma tag de nivel mais alto</h1>
@@ -40,6 +40,10 @@
             </ul>
         </li>
     </ol>
+
+
+    <a href="page2.html">Pagina 2</a>
+    <img src="../Site/img/Zuikaku.jpg">
 
     <ul>
         <li>item 1</li>
