teste de tabelas e exercicios

--- a/Web-dev-bootcamp/firstPage.html
+++ b/Web-dev-bootcamp/firstPage.html
@@ -54,6 +54,25 @@
 
     <h2>Essa outra definao com o mesmo tag</h2>
 
+    <table border="1">
+        <thead>
+            <tr>
+                <th>name</th>
+                <th>age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>vermelho</td>
+                <td>amarelho</td>
+            </tr>
+            <tr>
+                <td>yeet</td>
+                <td>this</td>
+            </tr>
+        </tbody>
+    </table>
+
     <h3>Essa outra heading com outra tag menor</h3>
 </body>
 </html>
