--- a/Web-dev-bootcamp/exercises/ex3/ex3.html
+++ b/Web-dev-bootcamp/exercises/ex3/ex3.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Navios de inciantes</h1>
 
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <td>Name</td>
@@ -20,21 +20,21 @@
         <tbody>
             <tr>
                 <td>Fubuki</td>
-                <td><img src="" alt=""></td>
+                <td><img src="../img/fubuki.jpg.jpg"></td>
                 <td>DD</td>
-                <td><a href="">Wiki</a></td>
+                <td><a href="https://en.wikipedia.org/wiki/Japanese_destroyer_Fubuki_(1927)">Wiki</a></td>
             </tr>
             <tr>
-                <td>??</td>
-                <td><img src="" alt=""></td>
-                <td>??</td>
-                <td><a href="">Wiki</a></td>
+                <td>Shirayuki</td>
+                <td><img src="../img/Japanese_destroyer_Shirayuki_in_1931.jpg"></td>
+                <td>DD</td>
+                <td><a href="https://en.wikipedia.org/wiki/Japanese_destroyer_Shirayuki_(1928)">Wiki</a></td>
             </tr>
             <tr>
-                <td>??</td>
-                <td><img src="" alt=""></td>
-                <td>??</td>
-                <td><a href="">Wiki</a></td>
+                <td>Hatsuyuki</td>
+                <td><img src="../img/300px-Hatsuyuki.jpg"></td>
+                <td>DD</td>
+                <td><a href="https://en.wikipedia.org/wiki/Japanese_destroyer_Hatsuyuki_(1928)">Wiki</a></td>
             </tr>
         </tbody>
     </table>
