adiciona o exercicio 4, e coloca uma label errada

--- a/Web-dev-bootcamp/firstPage.html
+++ b/Web-dev-bootcamp/firstPage.html
@@ -124,7 +124,7 @@
         <label for="navios">Navios: </label>
         <input type="radio" name="NaviosAvioes" value="NAVIOS" id="navios">
 
-        <label for="avioes"></label>
+        <label for="avioes">Avioes: </label>
         <input type="radio" name="NaviosAvioes" value="AVIOES" id="avioes">
 
         <p>mar ou ceu</p>
