--- a/Web-dev-bootcamp/Site/index.html
+++ b/Web-dev-bootcamp/Site/index.html
@@ -6,6 +6,17 @@
     <title>Pagina 1</title>
 </head>
 <body>
+
+    <h1>Sumario</h1>
+
+    <ul>
+        <li><a href="index.html">Pagina 1</a></li>
+        <li><a href="page2.html">Pagina 2</a></li>
+        <li><a href="page3.html">Pagina 3</a></li>
+    </ul>
+    
+    
+
     <h1>Essa é uma tag de nivel mais alto</h1>
     <!-- Comentario aleatorio para ser ser aleator-->
     <p>
@@ -45,7 +56,8 @@
 
     <a href="page2.html">Pagina 2</a>
     <p></p>
-    <img src="../Site/img/Zuikaku.jpg">
+    <img src="../../Site/img/Zuikaku.jpg">
+    <!-- <img src="%path%/Site/img/Zuikaku.jpg"> -->
 
     <h2>Testes com tabelas</h2>
 
