--- a/Web-dev-bootcamp/Site/page3.html
+++ b/Web-dev-bootcamp/Site/page3.html
@@ -8,6 +8,16 @@
     <title>Pagina 3</title>
 </head>
 <body>
+
+    <h1>Sumario</h1>
+
+    <ul>
+        <li><a href="index.html">Pagina 1</a></li>
+        <li><a href="page2.html">Pagina 2</a></li>
+        <li><a href="page3.html">Pagina 3</a></li>
+    </ul>
+
+
     <h1>Tipos de navios</h1>
 
     <ul>
