--- a/Web-dev-bootcamp/Site/page2.html
+++ b/Web-dev-bootcamp/Site/page2.html
@@ -6,8 +6,18 @@
     <title>Pagina 2</title>
 </head>
 <body>
+
+    <h1>Sumario</h1>
+
+    <ul>
+        <li><a href="index.html">Pagina 1</a></li>
+        <li><a href="page2.html">Pagina 2</a></li>
+        <li><a href="page3.html">Pagina 3</a></li>
+    </ul>
+
+
+
     <h1>Bem vindo a pagina 2</h1>
-    <img src="../Site/img/Shokaku.jpg">
-    <a href="firstPage.html">De volta a pagina 1</a>
+    <img src="../../Site/img/Shokaku.jpg">
 </body>
 </html>
