adiciona mais paginas e estilos

--- a/Web-dev-bootcamp/Site/page3.html
+++ b/Web-dev-bootcamp/Site/page3.html
@@ -26,7 +26,7 @@
         <li>Heavy Cruiser (CA)</li>
         <li>BattleShip (BB)</li>
         <li>Light Carrier (CVL)</li>
-        <li>Carrier Vessel (CV)</li>
+        <li><a href="./aircraftvessel.html">Aircraft Vessel (CV)</a></li>
     </ul>
 </body>
 </html>
