Novos testes com CSS

--- a/Web-dev-bootcamp/Site/aircraftvessel.html
+++ b/Web-dev-bootcamp/Site/aircraftvessel.html
@@ -9,22 +9,55 @@
 </head>
 <body>
 
-    <h1>Porta Avioes</h1>
+    <div>
+        <h1>Porta Avioes</h1>
 
-    <p id="text">
-        An aircraft carrier is a warship that serves as a seagoing airbase, equipped with a full-length flight deck and facilities for carrying,
-        arming, deploying, and recovering aircraft. Typically, it is the capital ship of a fleet, 
-        as it allows a naval force to project air power worldwide without depending on local bases for staging aircraft operations. 
-        Carriers have evolved since their inception in the early twentieth century from wooden vessels used to deploy balloons to nuclear-powered warships 
-        that carry numerous fighters, strike aircraft, helicopters, and other types of aircraft. While heavier aircraft such as fixed-wing gunships 
-        and bombers have been <span class="intext">launched from aircraft carriers, it is currently not possible to land them. By its diplomatic and tactical power,</span> 
-        its mobility, its autonomy and the variety of its means, the aircraft carrier is often the centerpiece of modern combat fleets. 
-        Tactically or even strategically, it replaced the battleship in the role of flagship of a fleet. One of its great advantages is that, 
-        by sailing in international waters, it does not interfere with any territorial sovereignty and thus obviates the need for overflight 
-        authorizations from third-party countries, reduces the times and transit distances of aircraft and therefore significantly increase the 
-        time of availability on the combat zone.
-    </p>
+        <p id="text" class="test" >
+            An aircraft carrier is a warship that serves as a seagoing airbase, equipped with a full-length flight deck and facilities for carrying,
+            arming, deploying, and recovering aircraft. Typically, it is the capital ship of a fleet, 
+            as it allows a naval force to project air power worldwide without depending on local bases for staging aircraft operations. 
+            Carriers have evolved since their inception in the early twentieth century from wooden vessels used to deploy balloons to nuclear-powered warships 
+            that carry numerous fighters, strike aircraft, helicopters, and other types of aircraft. While heavier aircraft such as fixed-wing gunships 
+            and bombers have been <span class="intext">launched from aircraft carriers, it is currently not possible to land them. By its diplomatic and tactical power,</span> 
+            its mobility, its autonomy and the variety of its means, the aircraft carrier is often the centerpiece of modern combat fleets. 
+            Tactically or even strategically, it replaced the battleship in the role of flagship of a fleet. One of its great advantages is that, 
+            by sailing in international waters, it does not interfere with any territorial sovereignty and thus obviates the need for overflight 
+            authorizations from third-party countries, reduces the times and transit distances of aircraft and therefore significantly increase the 
+            time of availability on the combat zone.
+        </p>
 
+        <p>
+            text
+        </p>
+
+        <p>texts</p>
+        <p>texts</p>
+        <p>texts</p>
+        <p>texts</p>
+        <p>texts</p>
+        <p>texts</p>
+    </div>
+
+    <div>
+        <h3>texto basico</h2>
+
+        <p class="test">paragrafo</p>
+
+        <p>helo</p>
+        <p>helo</p>
+        <p>helo</p>
+        <p>helo</p>
+        <p>helo</p>
+    </div>
+
+    <div>
+        <ul>
+            <li><a href="./index.html">Pagina 1</a></li>
+            <li><a href="./page2.html">Pagina 2</a></li>
+            <li><a href="./page3.html">Pagina 3</a></li>
+            <li><a href="https://www.google.com">Google</a></li>
+        </ul>
+    </div>
 
 </body>
 </html>
