--- a/Web-dev-bootcamp/Site/aircraftvessel.html
+++ b/Web-dev-bootcamp/Site/aircraftvessel.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/carrierstyles.css">
+    <link href="https://fonts.googleapis.com/css?family=Akronim|Lacquer&display=swap" rel="stylesheet">
     <title>Aircraft Vessel</title>
 </head>
 <body>
