Conserta erros de links

--- a/Web-dev-bootcamp/Site/page3.html
+++ b/Web-dev-bootcamp/Site/page3.html
@@ -21,10 +21,10 @@
     <h2>Tipos de navios</h2>
 
     <ul>
-        <li>Destroyer (DD)</li>
+        <li><a href="./destroyer.html">Destroyer (DD)</a></li>
         <li>Light Cruiser (CL)</li>
         <li>Heavy Cruiser (CA)</li>
-        <li>BattleShip (BB)</li>
+        <li><a href="./battleship.html">BattleShip (BB)</a></li>
         <li>Light Carrier (CVL)</li>
         <li><a href="./aircraftvessel.html">Aircraft Vessel (CV)</a></li>
     </ul>
