--- a/Web-dev-bootcamp/Site/page3.html
+++ b/Web-dev-bootcamp/Site/page3.html
@@ -25,7 +25,7 @@
         <li>Light Cruiser (CL)</li>
         <li>Heavy Cruiser (CA)</li>
         <li><a href="./battleship.html">BattleShip (BB)</a></li>
-        <li>Light Carrier (CVL)</li>
+        <li><a href="./lightaircraftvessel.html">Light Carrier (CVL)</a></li>
         <li><a href="./aircraftvessel.html">Aircraft Vessel (CV)</a></li>
     </ul>
 </body>
