Implementa sitema de grid e menus

--- a/Web-dev-bootcamp/Site/page3.html
+++ b/Web-dev-bootcamp/Site/page3.html
@@ -23,7 +23,7 @@
     <ul>
         <li><a href="./destroyer.html">Destroyer (DD)</a></li>
         <li>Light Cruiser (CL)</li>
-        <li>Heavy Cruiser (CA)</li>
+        <li><a href="./heavycruiser.html"></a></li>
         <li><a href="./battleship.html">BattleShip (BB)</a></li>
         <li><a href="./lightaircraftvessel.html">Light Carrier (CVL)</a></li>
         <li><a href="./aircraftvessel.html">Aircraft Vessel (CV)</a></li>
