--- a/Web-dev-bootcamp/Site/heavycruiser.html
+++ b/Web-dev-bootcamp/Site/heavycruiser.html
@@ -80,7 +80,7 @@
             <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> Galeria de navios</h1>
         </div>
 
-        <div class="row">
+        <div class="row flex">
             <div class="col-lg-4 col-sm-6">
                 <div class="thumbnail">
                     <img
@@ -90,13 +90,49 @@
             <div class="col-lg-4 col-sm-6">
                 <div class="thumbnail">
                     <img
-                        src="https://images.unsplash.com/photo-1518527989017-5baca7a58d3c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80">
+                        src="https://images.unsplash.com/photo-1502621737164-fb78cb47e276?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80">
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="thumbnail">
                     <img
-                        src="https://images.unsplash.com/photo-1518527989017-5baca7a58d3c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80">
+                        src="https://images.unsplash.com/photo-1496347326319-2935d381b307?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=891&q=80">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="thumbnail">
+                    <img
+                        src="https://images.unsplash.com/photo-1541524628935-fabc748e27db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=998&q=80">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="thumbnail">
+                    <img
+                        src="https://images.unsplash.com/photo-1551403793-9beb68d417af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="thumbnail">
+                    <img
+                        src="https://images.unsplash.com/photo-1524522173746-f628baad3644?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=803&q=80">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="thumbnail">
+                    <img
+                        src="https://images.unsplash.com/photo-1530327501560-a27ccd4a4d43?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=710&q=80">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="thumbnail">
+                    <img
+                        src="https://images.unsplash.com/photo-1522387026079-bd4a4d73115d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="thumbnail">
+                    <img
+                        src="https://images.unsplash.com/photo-1568347877321-f8935c7dc5a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80">
                 </div>
             </div>
         </div>
